--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:es": "rimraf es && tsc --target es6 --outDir es --module es6",
     "build": "npm run build:commonjs && npm run build:es",
     "ts": "ts-node src/",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "db": "mongod"
   },
   "author": "",
   "license": "ISC",
