--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
-    "lib": [
-      "es6"
-    ],
+    "target": "es6",
     "alwaysStrict": true,
     "strictNullChecks": true,
     "noImplicitAny": true
   },
-  "files": [
-    "src/index.ts"
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
