--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bignumber.js": "^7.0.1",
     "json-bigint": "^0.2.3",
     "linq": "^3.1.0",
+    "long": "^4.0.0",
     "mongodb": "^3.0.8"
   }
 }
